pod_com_vol_mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logger
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
        - name: log-storage
          mountPath: /var/www/nginx
  volumes:
    - name: log-storage
      persistentVolumeClaim:
        claimName: log-claim
