svc_modelo.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-servico
  namespace: default
spec:
  selector:
    app: minha-aplicacao
  ports:
    - protocol: TCP
      port: 80           # Porta exposta pelo Service
      targetPort: 8080   # Porta no container
  type: ClusterIP        # Pode ser ClusterIP, NodePort ou LoadBalancer
